k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pupoo-redis
  namespace: pupoo
spec:
  type: ClusterIP
  selector:
    app: pupoo-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
